Fix sidebar width
got too small sometimes

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li{
 
 .container{
   display:grid;
-  grid-template-columns: 20% auto;
+  grid-template-columns: max(160px,20%) auto;
   height:100vh;
 }
 
